<?xml version="1.0"?>
<package>
    <name>simple_zynq_camera</name>
    <version>0.0.1</version>
    <description>The simple zynq_camera grabber node</description>

    <maintainer email="philipp.huth@greenteam-stuttgart.de">Philipp Huth</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>


    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>


</package>
